--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
-open_collective: [plandem]
-ko_fi: [plandem]
-custom: [https://www.paypal.me/gayvoronsky]
+open_collective: plandem
+ko_fi: plandem
+custom: https://www.paypal.me/gayvoronsky
