--- a/docs/.vuepress/config.yml
+++ b/docs/.vuepress/config.yml
@@ -1,2 +1,6 @@
-title: 'Hello VuePress'
+title: 'xlsx in Go'
 description: 'Just playing around'
+themeConfig:
+  sidebar: 'auto'
+  logo: '/assets/img/logo.png'
+
