--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - go get github.com/go-playground/overalls
 
 script:
-  - overalls -project=github.com/plandem/xlsx2go -covermode=atomic -- -race -v
+  - overalls -project=github.com/plandem/xlsx -covermode=atomic -- -race -v
   - mv overalls.coverprofile coverage.txt
   - rm profile.coverprofile
 
